--- a/index.html
+++ b/index.html
@@ -94,7 +94,12 @@
     <div class="content">
         <h2>Hello world!!!</h2>
         <p>We are dedicated to providing the best user experience on the web. Our platform offers a variety of features that cater to all your needs.</p>
-        <p>Explore our website and learn more about what we offer!</p>
+        <p>Explore our website and learn more about what we offer! hello world
+            Explore our website and learn more about what we offer! hello world
+            Explore our website and learn more about what we offer! hello world
+            Explore our website and learn more about what we offer! hello world
+            Explore our website and learn more about what we offer! hello world
+        </p>
     </div>
 
     <!-- Footer Section -->
